[package]
name = "secret-tree"
edition = "2018"
version = "0.2.0"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Pavel Mukhanov <mukhanovpv@gmail.com>",
]
license = "Apache-2.0"
keywords = ["derivation", "blake2b", "cryptography"]
readme = "README.md"
categories = ["cryptography", "no-std"]
description = "Hierarchical secret derivation with Blake2b"
repository = "https://github.com/slowli/secret-tree"

[dependencies]
# Public dependencies (present in the API exposed by the crate).
rand = { version = "0.7.3", default-features = false }
rand_chacha = { version = "0.2.2", default-features = false }

# Private dependencies.
blake2 = { version = "0.9.1", default-features = false }
byteorder = { version = "1.3.4", default-features = false }
zeroize = { version = "1.1.1", default-features = false, features = ["zeroize_derive"] }

[dev-dependencies]
hex = "0.4.2"
hex-literal = "0.3.1"
ed25519 = { package = "ed25519-dalek", version = "1.0.1" }
pwbox = { version = "0.3.0", default-features = false, features = ["rust-crypto"] }
toml = "0.5.7"
version-sync = "0.9"

[[example]]
name = "ed25519"
path = "examples/ed25519.rs"
