[package]
name = "secret-tree"
edition = "2018"
version = "0.3.0"
authors = [
  "Alex Ostrovski <ostrovski.alex@gmail.com>",
  "Pavel Mukhanov <mukhanovpv@gmail.com>",
]
license = "Apache-2.0"
keywords = ["derivation", "blake2b", "cryptography"]
readme = "README.md"
categories = ["cryptography", "no-std"]
description = "Hierarchical secret derivation with Blake2b"
repository = "https://github.com/slowli/secret-tree"

[dependencies]
# Public dependencies (present in the API exposed by the crate).
rand = { version = "0.8.1", default-features = false }
rand_chacha = { version = "0.3.0", default-features = false }
secrecy = { version = "0.7.0", default-features = false }

# Private dependencies.
blake2 = { version = "0.9.1", default-features = false }

[dev-dependencies]
const-decoder = "0.1.0"
doc-comment = "0.3.3"
hex = "0.4.2"
ed25519 = { package = "ed25519-dalek", version = "1.0.1" }
pwbox = { version = "0.4.0", default-features = false, features = ["std", "rust-crypto"] }
toml = "0.5.7"
version-sync = "0.9"

[features]
default = ["std"]
# Enables features dependent on the full standard library. For now, this feature only
# enables implementation of `std::error::Error` trait for error types.
std = []

[[example]]
name = "ed25519"
path = "examples/ed25519.rs"
required-features = ["rand/std", "rand/std_rng"]
